Fix port issues
Took 1 minute